--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -218,6 +218,9 @@
     <Compile Include="..\Vts.Test\MonteCarlo\Detectors\pMCDAWTwoLayerDetectorsTests.cs">
       <Link>MonteCarlo\Detectors\pMCDAWTwoLayerDetectorsTests.cs</Link>
     </Compile>
+    <Compile Include="..\Vts.Test\MonteCarlo\Helpers\SourceToolboxTests.cs">
+      <Link>MonteCarlo\Helpers\SourceToolboxTests.cs</Link>
+    </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\IO\DetectorIOTests.cs">
       <Link>MonteCarlo\IO\DetectorIOTests.cs</Link>
     </Compile>
@@ -236,6 +239,9 @@
     <Compile Include="..\Vts.Test\MonteCarlo\PostProcessing\PostProcessingTests.cs">
       <Link>MonteCarlo\PostProcessing\PostProcessingTests.cs</Link>
     </Compile>
+    <Compile Include="..\Vts.Test\MonteCarlo\Sources\PointSources\DirectionalPointSourceTests.cs">
+      <Link>MonteCarlo\Sources\PointSources\DirectionalPointSourceTests.cs</Link>
+    </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\Sources\PointSources\IsotropicPointSourceTests.cs">
       <Link>MonteCarlo\Sources\PointSources\IsotropicPointSourceTests.cs</Link>
     </Compile>
@@ -250,6 +256,15 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Modeling\Optimizers\" />
+    <Folder Include="MonteCarlo\Sources\LineSources\" />
+    <Folder Include="MonteCarlo\Sources\SurfaceEmittingSources\Circular\" />
+    <Folder Include="MonteCarlo\Sources\SurfaceEmittingSources\Cuboidal\" />
+    <Folder Include="MonteCarlo\Sources\SurfaceEmittingSources\CylindricalFiber\" />
+    <Folder Include="MonteCarlo\Sources\SurfaceEmittingSources\Elliptical\" />
+    <Folder Include="MonteCarlo\Sources\SurfaceEmittingSources\Rectangular\" />
+    <Folder Include="MonteCarlo\Sources\SurfaceEmittingSources\Spherical\" />
+    <Folder Include="MonteCarlo\Sources\SurfaceEmittingSources\Tubular\" />
+    <Folder Include="MonteCarlo\Sources\VolumetricSources\" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
