--- a/src/Vts.Test/Vts.Test.csproj
+++ b/src/Vts.Test/Vts.Test.csproj
@@ -271,6 +271,9 @@
     <Compile Include="MonteCarlo\PostProcessing\PostProcessingTests.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="MonteCarlo\Sources\LineSources\CustomLineSourceTests.cs" />
+    <Compile Include="MonteCarlo\Sources\LineSources\IsotropicLineSourceTests.cs" />
+    <Compile Include="MonteCarlo\Sources\PointSources\CustomPointSourceTests.cs" />
     <Compile Include="MonteCarlo\Sources\PointSources\DirectionalPointSourceTests.cs" />
     <Compile Include="MonteCarlo\Sources\PointSources\IsotropicPointSourceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
