Modified Photon so that unit tests pass.  Handling of exiting tissue reverted to similar to default.
--HG--
branch : ch-110322-transport_of_source_restructuring

--- a/src/Vts.Test/Vts.Test.csproj
+++ b/src/Vts.Test/Vts.Test.csproj
@@ -154,8 +154,9 @@
     <Compile Include="Common\DirectionTests.cs">
       <SubType>Code</SubType>
     </Compile>
-     <Compile Include="Common\ExtensionMethods\EnumExtensionsTests.cs" />
+    <Compile Include="Common\ExtensionMethods\EnumExtensionsTests.cs" />
     <Compile Include="Modeling\Spectroscopy\SpectralConverterTest.cs" />
+    <Compile Include="MonteCarlo\DataStructures\SimulationInputExtensionsTests.cs" />
     <Compile Include="MonteCarlo\Rng\SerializableMersenneTwisterTests.cs" />
     <Compile Include="Common\Helpers\Range\DoubleRangeTests.cs">
       <SubType>Code</SubType>
