Added SpecularReflectanceDetector.cs Added sanity check of source input initialTissueRegionIndex in SimulationInputValidation. Updated quickfix code in Photon to match linux results.
--HG--
branch : ch-110322-transport_of_source_restructuring

--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -165,6 +165,7 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <Compile Include="Modeling\Spectroscopy\SpectralConverter.cs" />
+    <Compile Include="MonteCarlo\Detectors\SpecularReflectanceDetector.cs" />
     <Compile Include="MonteCarlo\Rng\MersenneTwisterSerializationInfo.cs" />
     <Compile Include="MonteCarlo\Rng\SerializableMersenneTwister.cs" />
     <Compile Include="Factories\ComputationFactory.cs" />
