Added an overload method for ConvertCoefficient that passes a default MolarUnit of MicroMolar Added all tests 4 for wavelength and 4 x 4 (16) for coefficient

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -961,6 +961,7 @@
   <ItemGroup>
     <EmbeddedResource Include="..\Vts\Modeling\Spectroscopy\Resources\SpectraData1.xml">
       <Link>Modeling\Spectroscopy\Resources\SpectraData1.xml</Link>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="..\Vts\Modeling\Spectroscopy\Resources\ValidMockDataInResources.xml">
       <Link>Modeling\Spectroscopy\Resources\ValidMockDataInResources.xml</Link>
