--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -165,7 +165,12 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <Compile Include="Modeling\Spectroscopy\SpectralConverter.cs" />
-    <Compile Include="MonteCarlo\Detectors\SpecularReflectanceDetector.cs" />
+    <Compile Include="MonteCarlo\Controllers\VirtualBoundaryController.cs" />
+    <Compile Include="MonteCarlo\DataStructures\DetectorInputs\RSpecularDetectorInput.cs" />
+    <Compile Include="MonteCarlo\Detectors\RSpecularDetector.cs" />
+    <Compile Include="MonteCarlo\Factories\VirtualBoundaryControllerFactory.cs" />
+    <Compile Include="MonteCarlo\Factories\VirtualBoundaryFactory.cs" />
+    <Compile Include="MonteCarlo\Interfaces\IVirtualBoundary.cs" />
     <Compile Include="MonteCarlo\Rng\MersenneTwisterSerializationInfo.cs" />
     <Compile Include="MonteCarlo\Rng\SerializableMersenneTwister.cs" />
     <Compile Include="Factories\ComputationFactory.cs" />
@@ -412,6 +417,8 @@
     <Compile Include="MonteCarlo\Tissues\SingleEllipsoidTissue.cs" />
     <Compile Include="MonteCarlo\Tissues\TissueBase.cs" />
     <Compile Include="MonteCarlo\Tissues\VoxelRegion.cs" />
+    <Compile Include="MonteCarlo\VirtualBoundaries\PlanarReflectionVB.cs" />
+    <Compile Include="MonteCarlo\VirtualBoundaries\PlanarTransmissionVB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
