Modifications to get baseline virtual boundary code working. Changes include: PhotonStateType bit definitions for VBs.  These are used in each detector's ContainsPoint that determines whether datapoint should be tallied or not. Termination and History tally lists moved from DetectorController to VBController. MCSimulation main loop modified so to not call CrossOrReflect unless crossing tissue interface and not VB. Photon updates to set PST bits correctly during journey of photon. Currently all unit tests passing except those having to do with pMC.
--HG--
branch : ch-110322-transport_of_source_restructuring

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -967,6 +967,9 @@
     <Compile Include="..\Vts\MonteCarlo\Tissues\VoxelRegion.cs">
       <Link>MonteCarlo\Tissues\VoxelRegion.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\MonteCarlo\VirtualBoundaries\GenericVolumeVirtualBoundary.cs">
+      <Link>MonteCarlo\VirtualBoundaries\GenericVolumeVirtualBoundary.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\MonteCarlo\VirtualBoundaries\PlanarReflectionVirtualBoundary.cs">
       <Link>MonteCarlo\VirtualBoundaries\PlanarReflectionVirtualBoundary.cs</Link>
     </Compile>
