Removed SpectralDatabaseLoader.cs and placed the loader code in SpectralDatabase.cs Renamed the test file to SpectralDatabaseTest.cs and updated the tests

--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -170,8 +170,8 @@
     <Compile Include="..\Vts.Test\Modeling\Spectroscopy\SpectralConverterTest.cs">
       <Link>Modeling\Spectroscopy\SpectralConverterTest.cs</Link>
     </Compile>
-    <Compile Include="..\Vts.Test\Modeling\Spectroscopy\SpectralDatabaseLoaderTest.cs">
-      <Link>Modeling\Spectroscopy\SpectralDatabaseLoaderTest.cs</Link>
+    <Compile Include="..\Vts.Test\Modeling\Spectroscopy\SpectralDatabaseTest.cs">
+      <Link>Modeling\Spectroscopy\SpectralDatabaseTest.cs</Link>
     </Compile>
     <Compile Include="..\Vts.Test\Modeling\ValidateInverseSolution.cs">
       <Link>Modeling\ValidateInverseSolution.cs</Link>
