Restructured virtual boundaries and consolidated MC loop logic
--HG--
branch : ch-110322-transport_of_source_restructuring

--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -417,6 +417,7 @@
     <Compile Include="MonteCarlo\Tissues\SingleEllipsoidTissue.cs" />
     <Compile Include="MonteCarlo\Tissues\TissueBase.cs" />
     <Compile Include="MonteCarlo\Tissues\VoxelRegion.cs" />
+    <Compile Include="MonteCarlo\VirtualBoundaries\DiffuseReflectanceVirtualBoundary.cs" />
     <Compile Include="MonteCarlo\VirtualBoundaries\GenericVolumeVirtualBoundary.cs" />
     <Compile Include="MonteCarlo\VirtualBoundaries\PlanarReflectionVirtualBoundary.cs" />
     <Compile Include="MonteCarlo\VirtualBoundaries\PlanarTransmissionVirtualBoundary.cs" />
