--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -131,12 +131,12 @@
     <Compile Include="Common\DependsOnAttribute.cs" />
     <Compile Include="Common\Direction.cs" />
     <Compile Include="Common\Enums.cs" />
-    <Compile Include="Common\Extension Methods\ArrayExtensions.cs" />
-    <Compile Include="Common\Extension Methods\DataExtensions.cs" />
-    <Compile Include="Common\Extension Methods\EnumerableExtensions.cs" />
-    <Compile Include="Common\Extension Methods\EnumExtensions.cs" />
-    <Compile Include="Common\Extension Methods\IEnumerableArrayExtensions.cs" />
-    <Compile Include="Common\Extension Methods\OpticalPropertiesExtensions.cs" />
+    <Compile Include="Common\Extensions\ArrayExtensions.cs" />
+    <Compile Include="Common\Extensions\DataExtensions.cs" />
+    <Compile Include="Common\Extensions\EnumerableExtensions.cs" />
+    <Compile Include="Common\Extensions\EnumExtensions.cs" />
+    <Compile Include="Common\Extensions\IEnumerableArrayExtensions.cs" />
+    <Compile Include="Common\Extensions\OpticalPropertiesExtensions.cs" />
     <Compile Include="Common\GlobalConstants.cs" />
     <Compile Include="Common\Helpers\EnumHelper.cs" />
     <Compile Include="Common\Helpers\FuncOfT.cs" />
@@ -339,7 +339,7 @@
     <Compile Include="MonteCarlo\PhotonData\PhotonDataPointSerializer.cs" />
     <Compile Include="MonteCarlo\PhotonData\SubRegionCollisionInfo.cs" />
     <Compile Include="MonteCarlo\PostProcessing\PhotonTerminationDatabasePostProcessor.cs" />
-    <Compile Include="Common\Extension Methods\RNGExtensions.cs" />
+    <Compile Include="Common\Extensions\RNGExtensions.cs" />
     <Compile Include="MonteCarlo\PostProcessing\PostProcessorInput.cs" />
     <Compile Include="MonteCarlo\Helpers\SourceFlags.cs" />
     <Compile Include="MonteCarlo\Sources\SourceDefaults.cs">
