Added a function to SpectralDatabase.cs to load the data into a dictionary from a tab delimeted file Added a test for the method - needs some modification Added a tab delimeted file Spectra.txt

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -445,9 +445,6 @@
     <Compile Include="..\Vts\Modeling\Spectroscopy\SpectralDatabase.cs">
       <Link>Modeling\Spectroscopy\SpectralDatabase.cs</Link>
     </Compile>
-    <Compile Include="..\Vts\Modeling\Spectroscopy\SpectralDatabaseLoader.cs">
-      <Link>Modeling\Spectroscopy\SpectralDatabaseLoader.cs</Link>
-    </Compile>
     <Compile Include="..\Vts\Modeling\Spectroscopy\Tissue.cs">
       <Link>Modeling\Spectroscopy\Tissue.cs</Link>
     </Compile>
@@ -968,6 +965,9 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="..\Vts\Modeling\Spectroscopy\Resources\Spectra.txt">
+      <Link>Modeling\Spectroscopy\Resources\Spectra.txt</Link>
+    </EmbeddedResource>
     <EmbeddedResource Include="..\Vts\Modeling\Resources\ReferenceNurbs\SpatialFrequencyDomain\v0p1\spaceNurbsValues.xml">
       <Link>Modeling\Resources\ReferenceNurbs\SpatialFrequencyDomain\v0p1\spaceNurbsValues.xml</Link>
     </EmbeddedResource>
@@ -1054,9 +1054,9 @@
     <EmbeddedResource Include="..\Vts\Modeling\Resources\ReferenceData\N1e8mua0musp1g0p8dr0p2dt0p005\R_fxt">
       <Link>Modeling\Resources\ReferenceData\N1e8mua0musp1g0p8dr0p2dt0p005\R_fxt</Link>
     </EmbeddedResource>
-    <None Include="..\Vts\Modeling\Spectroscopy\Resources\Fat.csv">
+    <EmbeddedResource Include="..\Vts\Modeling\Spectroscopy\Resources\Fat.csv">
       <Link>Modeling\Spectroscopy\Resources\Fat.csv</Link>
-    </None>
+    </EmbeddedResource>
     <None Include="Vts.snk" />
   </ItemGroup>
   <ItemGroup>
