On my branch, I've revamped the Vts.MonteCarlo.Detectors unit tests for the following reasons: 1) the MC code now goes through Fresnel at the tissue surface (i.e. it goes through the same transport code that other refractive mismatches performs). 2) the code in CrossOrReflect now does not call a RNG if there is no mismatch. A pseudo collision is noted but no RNG. This means that if I have a homogenous one layer tissue and run a simulation and I have a two layer tissue with the same optical properties in both layers = homogeneous, the biographies in these two simulations are the same. Pausing at the pseudo-collisions does not change the RNG sequence. This has been advantageous while debugging. 3) All of the unit tests were not passing due to 1) since the linux code handles specular by deweighting. But due to 2) I was able to rewrite the unit tests in an optimal way by: a) merging the two-layer (homogeneous) tests with the one-layer tests because they should give the same results. b) I added a specular "factor" to my C# results in my unit tests and am now able to use my previous linux results without rerunning them.
--HG--
branch : ch-110322-transport_of_source_restructuring

--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -209,20 +209,14 @@
     <Compile Include="..\Vts.Test\MonteCarlo\Detectors\CAWDetectorsTests.cs">
       <Link>MonteCarlo\Detectors\CAWDetectorsTests.cs</Link>
     </Compile>
-    <Compile Include="..\Vts.Test\MonteCarlo\Detectors\CAWTwoLayerDetectorsTests.cs">
-      <Link>MonteCarlo\Detectors\CAWTwoLayerDetectorsTests.cs</Link>
-    </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\Detectors\DAWDetectorsTests.cs">
       <Link>MonteCarlo\Detectors\DAWDetectorsTests.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts.Test\MonteCarlo\Detectors\DAWTwoLayerDetectorsTests.cs">
-      <Link>MonteCarlo\Detectors\DAWTwoLayerDetectorsTests.cs</Link>
     </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\Detectors\pMCDAWDetectorsTests.cs">
       <Link>MonteCarlo\Detectors\pMCDAWDetectorsTests.cs</Link>
     </Compile>
-    <Compile Include="..\Vts.Test\MonteCarlo\Detectors\pMCDAWTwoLayerDetectorsTests.cs">
-      <Link>MonteCarlo\Detectors\pMCDAWTwoLayerDetectorsTests.cs</Link>
+    <Compile Include="..\Vts.Test\MonteCarlo\Detectors\SpecularDetectorsTests.cs">
+      <Link>MonteCarlo\Detectors\SpecularDetectorsTests.cs</Link>
     </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\Helpers\SourceToolboxTests.cs">
       <Link>MonteCarlo\Helpers\SourceToolboxTests.cs</Link>
